--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.4.3",
     "prettier": "^2.8.8",
+    "prisma": "^4.14.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.14.0"
   }
 }
